# rust-go-grpc-demo

./: README.md
proto/: say.proto
python/: Pipfile  README.md  client.py  say_pb2.py  say_pb2_grpc.py  server.py
resources/: service.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
