[package]
name = "rust"
version = "0.1.0"
authors = ["John Sigvald Skauge <johnsigvaldskauge@tv2.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.0"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"

[build-dependencies]
tonic-build = "0.4.0"

[[bin]]
name = "client"
test = false

[[bin]]
name = "server"
test = false
